# ch05_dstagram

./: .gitignore  .python-version  db.sqlite3  pyproject.toml
accounts/: forms.py  urls.py  views.py
accounts/templates/registration/: login.html  logout.html  register.html  register_done.html
config/: settings.py  urls.py
photo/: models.py  urls.py  views.py
photo/migrations/: 0001_initial.py
photo/templates/photo/: delete.html  detail.html  list.html  update.html  upload.html
templates/: base.html
