[tool.poetry]
name = "ch05"
version = "0.1.0"
description = ""
authors = ["moonpeter <moonpeter@kakao.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pillow = "^7.1.2"
django-disqus = "^0.5"
django = ">3.0"
boto3 = "^1.13.11"
django-storages = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
